crates/query-engine/translation/tests/snapshots/tests__nested_array_relationships.snap
---
source: crates/query-engine/translation/tests/tests.rs
expression: result
---
SELECT
  JSON_OBJECT('rows', ARRAY_AGG(universe_7)) AS universe
FROM
  (
    SELECT
      *
    FROM
      (
        SELECT
          RELATIONSHIP_Albums_1.Albums AS Albums
        FROM
          public.Artist AS Artist_0
          LEFT OUTER JOIN (
            SELECT
              JSON_OBJECT('rows', ARRAY_AGG(RELATIONSHIP_Albums_1)) AS Albums
            FROM
              (
                SELECT
                  *
                FROM
                  (
                    SELECT
                      RELATIONSHIP_Tracks_3.Tracks AS Tracks
                    FROM
                      public.Album AS Album_2
                      LEFT OUTER JOIN (
                        SELECT
                          JSON_OBJECT('rows', ARRAY_AGG(RELATIONSHIP_Tracks_3)) AS Tracks
                        FROM
                          (
                            SELECT
                              *
                            FROM
                              (
                                SELECT
                                  Track_4.Name AS name
                                FROM
                                  public.Track AS Track_4
                                WHERE
                                  (
                                    true
                                    AND (Album_2.AlbumId = Track_4.AlbumId)
                                  )
                              ) AS rows_5
                          ) AS RELATIONSHIP_Tracks_3
                      ) AS RELATIONSHIP_Tracks_3 ON (true)
                    WHERE
                      (
                        true
                        AND (Artist_0.ArtistId = Album_2.ArtistId)
                      )
                  ) AS rows_6
              ) AS RELATIONSHIP_Albums_1
          ) AS RELATIONSHIP_Albums_1 ON (true)
      ) AS rows_8
  ) AS universe_7

[]
