crates/query-engine/translation/tests/snapshots/tests__nested_recursive_relationship.snap
---
source: crates/query-engine/translation/tests/tests.rs
expression: result
---
SELECT
  row_to_json("universe") AS "universe"
FROM
  (
    SELECT
      *
    FROM
      (
        SELECT
          coalesce(json_agg(row_to_json("rows")), '[]') AS "rows"
        FROM
          (
            SELECT
              "%RELATIONSHIP_0_FOR_Albums"."Albums" AS "Albums"
            FROM
              "public"."Artist" AS "Artist"
              LEFT OUTER JOIN LATERAL (
                SELECT
                  row_to_json("%RELATIONSHIP_0_FOR_Albums") AS "Albums"
                FROM
                  (
                    SELECT
                      *
                    FROM
                      (
                        SELECT
                          coalesce(json_agg(row_to_json("rows")), '[]') AS "rows"
                        FROM
                          (
                            SELECT
                              "%RELATIONSHIP_0_FOR_Artist"."Artist" AS "Artist"
                            FROM
                              "public"."Album" AS "Album"
                              LEFT OUTER JOIN LATERAL (
                                SELECT
                                  row_to_json("%RELATIONSHIP_0_FOR_Artist") AS "Artist"
                                FROM
                                  (
                                    SELECT
                                      *
                                    FROM
                                      (
                                        SELECT
                                          coalesce(json_agg(row_to_json("rows")), '[]') AS "rows"
                                        FROM
                                          (
                                            SELECT
                                              "Artist"."Name" AS "name"
                                            FROM
                                              "public"."Artist" AS "Artist"
                                            WHERE
                                              (
                                                true
                                                AND ("Album"."ArtistId" = "Artist"."ArtistId")
                                              )
                                          ) AS "rows"
                                      ) AS "rows"
                                  ) AS "%RELATIONSHIP_0_FOR_Artist"
                              ) AS "%RELATIONSHIP_0_FOR_Artist" ON ('true')
                            WHERE
                              (
                                true
                                AND ("Artist"."ArtistId" = "Album"."ArtistId")
                              )
                          ) AS "rows"
                      ) AS "rows"
                  ) AS "%RELATIONSHIP_0_FOR_Albums"
              ) AS "%RELATIONSHIP_0_FOR_Albums" ON ('true')
          ) AS "rows"
      ) AS "rows"
  ) AS "universe"

[]
