crates/query-engine/translation/tests/snapshots/tests__select_where_album_id_equals_self_nested_object_relationship.snap
---
source: crates/query-engine/translation/tests/tests.rs
expression: result
---
SELECT
  row_to_json("%12_universe") AS "universe"
FROM
  (
    SELECT
      *
    FROM
      (
        SELECT
          coalesce(json_agg(row_to_json("%13_rows")), '[]') AS "rows"
        FROM
          (
            SELECT
              "%0_Track"."Name" AS "track",
              "%0_Track"."AlbumId" AS "AlbumId",
              "%1_RELATIONSHIP_Album"."Album" AS "Album"
            FROM
              "public"."Track" AS "%0_Track"
              LEFT OUTER JOIN LATERAL (
                SELECT
                  row_to_json("%1_RELATIONSHIP_Album") AS "Album"
                FROM
                  (
                    SELECT
                      *
                    FROM
                      (
                        SELECT
                          coalesce(json_agg(row_to_json("%7_rows")), '[]') AS "rows"
                        FROM
                          (
                            SELECT
                              "%2_Album"."Title" AS "album",
                              "%3_RELATIONSHIP_Artist"."Artist" AS "Artist"
                            FROM
                              "public"."Album" AS "%2_Album"
                              LEFT OUTER JOIN LATERAL (
                                SELECT
                                  row_to_json("%3_RELATIONSHIP_Artist") AS "Artist"
                                FROM
                                  (
                                    SELECT
                                      *
                                    FROM
                                      (
                                        SELECT
                                          coalesce(json_agg(row_to_json("%5_rows")), '[]') AS "rows"
                                        FROM
                                          (
                                            SELECT
                                              "%4_Artist"."Name" AS "artist",
                                              "%4_Artist"."ArtistId" AS "ArtistId"
                                            FROM
                                              "public"."Artist" AS "%4_Artist"
                                            WHERE
                                              (
                                                true
                                                AND ("%2_Album"."ArtistId" = "%4_Artist"."ArtistId")
                                              )
                                          ) AS "%5_rows"
                                      ) AS "%5_rows"
                                  ) AS "%3_RELATIONSHIP_Artist"
                              ) AS "%3_RELATIONSHIP_Artist" ON ('true')
                            WHERE
                              (
                                true
                                AND ("%0_Track"."AlbumId" = "%2_Album"."AlbumId")
                              )
                          ) AS "%7_rows"
                      ) AS "%7_rows"
                  ) AS "%1_RELATIONSHIP_Album"
              ) AS "%1_RELATIONSHIP_Album" ON ('true')
              INNER JOIN LATERAL (
                SELECT
                  *
                FROM
                  "public"."Album" AS "%9_BOOLEXP_Album"
                WHERE
                  (
                    (
                      true
                      AND ("%9_BOOLEXP_Album"."Title" = $1)
                    )
                    AND (
                      "%0_Track"."AlbumId" = "%9_BOOLEXP_Album"."AlbumId"
                    )
                  )
              ) AS "%9_BOOLEXP_Album" ON ('true')
              INNER JOIN LATERAL (
                SELECT
                  *
                FROM
                  "public"."Album" AS "%10_BOOLEXP_Album"
                WHERE
                  (
                    (
                      true
                      AND ("%10_BOOLEXP_Album"."Title" = $2)
                    )
                    AND (
                      "%0_Track"."AlbumId" = "%10_BOOLEXP_Album"."AlbumId"
                    )
                  )
              ) AS "%10_BOOLEXP_Album" ON ('true')
              INNER JOIN LATERAL (
                SELECT
                  *
                FROM
                  "public"."Artist" AS "%11_BOOLEXP_Artist"
                WHERE
                  (
                    (
                      true
                      AND ("%11_BOOLEXP_Artist"."Name" = $3)
                    )
                    AND (
                      "%10_BOOLEXP_Album"."ArtistId" = "%11_BOOLEXP_Artist"."ArtistId"
                    )
                  )
              ) AS "%11_BOOLEXP_Artist" ON ('true')
            WHERE
              (
                "%9_BOOLEXP_Album"."AlbumId" > "%11_BOOLEXP_Artist"."ArtistId"
              )
            ORDER BY
              "%0_Track"."TrackId" ASC
            LIMIT
              5
          ) AS "%13_rows"
      ) AS "%13_rows"
  ) AS "%12_universe"

[(1, String("The album title (1)")), (2, String("The album title (2)")), (3, String("The Artist name"))]
