crates/query-engine/translation/tests/snapshots/tests__sorting_by_nested_relationship_column.snap
---
source: crates/query-engine/translation/tests/tests.rs
expression: result
---
SELECT
  JSON_OBJECT('rows', ARRAY_AGG(universe_4)) AS universe
FROM
  (
    SELECT
      *
    FROM
      (
        SELECT
          track_0.Name AS Name
        FROM
          public.Track AS track_0
          LEFT OUTER JOIN (
            SELECT
              ORDER_PART_artist_2.Name AS name
            FROM
              (
                SELECT
                  ORDER_PART_album_1.ArtistId AS ArtistId
                FROM
                  public.Album AS ORDER_PART_album_1
              ) AS ORDER_PART_album_1
              LEFT OUTER JOIN (
                SELECT
                  ORDER_PART_artist_2.Name AS Name
                FROM
                  public.Artist AS ORDER_PART_artist_2
              ) AS ORDER_PART_artist_2 ON (
                (
                  true
                  AND (
                    ORDER_PART_album_1.ArtistId = ORDER_PART_artist_2.ArtistId
                  )
                )
              )
          ) AS ORDER_FOR_track_3 ON (true)
        ORDER BY
          ORDER_FOR_track_3.name ASC
      ) AS rows_5
  ) AS universe_4

[]
