crates/query-engine/translation/tests/snapshots/tests__sorting_by_nested_relationship_count.snap
---
source: crates/query-engine/translation/tests/tests.rs
expression: result
---
SELECT
  JSON_OBJECT('rows', ARRAY_AGG(universe_3)) AS universe
FROM
  (
    SELECT
      *
    FROM
      (
        SELECT
          Artist_0.Name AS Name
        FROM
          public.Artist AS Artist_0
          LEFT OUTER JOIN (
            SELECT
              count(ORDER_PART_Album_1.AlbumId) AS AlbumId
            FROM
              (
                SELECT
                  ORDER_PART_Album_1.AlbumId AS AlbumId
                FROM
                  public.Album AS ORDER_PART_Album_1
              ) AS ORDER_PART_Album_1
          ) AS ORDER_FOR_Artist_2 ON (true)
        ORDER BY
          ORDER_FOR_Artist_2.AlbumId DESC
        LIMIT
          3
      ) AS rows_4
  ) AS universe_3

[]
