crates/query-engine/translation/tests/snapshots/tests__sorting_by_recursive_relationship_column.snap
---
source: crates/query-engine/translation/tests/tests.rs
expression: result
---
SELECT
  JSON_OBJECT('rows', ARRAY_AGG(universe_4)) AS universe
FROM
  (
    SELECT
      *
    FROM
      (
        SELECT
          Company_0.Name AS Name
        FROM
          public.Company AS Company_0
          LEFT OUTER JOIN (
            SELECT
              ORDER_PART_Person_2.Name AS Name
            FROM
              (
                SELECT
                  ORDER_PART_Person_1.ParentId AS ParentId
                FROM
                  public.Person AS ORDER_PART_Person_1
              ) AS ORDER_PART_Person_1
              LEFT OUTER JOIN (
                SELECT
                  ORDER_PART_Person_2.Name AS Name
                FROM
                  public.Person AS ORDER_PART_Person_2
              ) AS ORDER_PART_Person_2 ON (
                (
                  true
                  AND (
                    ORDER_PART_Person_1.ParentId = ORDER_PART_Person_2.PersonId
                  )
                )
              )
          ) AS ORDER_FOR_Company_3 ON (true)
        ORDER BY
          ORDER_FOR_Company_3.Name ASC
      ) AS rows_5
  ) AS universe_4

[]
