crates/query-engine/translation/tests/snapshots/tests__sorting_by_relationship_column.snap
---
source: crates/query-engine/translation/tests/tests.rs
expression: result
---
SELECT
  JSON_OBJECT('rows', ARRAY_AGG(universe_3)) AS universe
FROM
  (
    SELECT
      *
    FROM
      (
        SELECT
          Album_0.Title AS Name
        FROM
          public.Album AS Album_0
          LEFT OUTER JOIN (
            SELECT
              ORDER_PART_Artist_1.Name AS Name
            FROM
              (
                SELECT
                  ORDER_PART_Artist_1.Name AS Name
                FROM
                  public.Artist AS ORDER_PART_Artist_1
              ) AS ORDER_PART_Artist_1
          ) AS ORDER_FOR_Album_2 ON (true)
        ORDER BY
          ORDER_FOR_Album_2.Name ASC
        LIMIT
          5 OFFSET 3
      ) AS rows_4
  ) AS universe_3

[]
