crates/query-engine/translation/tests/snapshots/tests__sorting_by_relationship_count.snap
---
source: crates/query-engine/translation/tests/tests.rs
expression: result
---
SELECT
  JSON_OBJECT('rows', ARRAY_AGG(universe_3)) AS universe
FROM
  (
    SELECT
      *
    FROM
      (
        SELECT
          Artist_0.Name AS Name
        FROM
          public.Artist AS Artist_0
          LEFT OUTER JOIN (
            SELECT
              COUNT(*) AS count
            FROM
              public.Album AS Album_1
            WHERE
              (
                true
                AND (Artist_0.ArtistId = Album_1.ArtistId)
              )
          ) AS ORDER_COUNT_FOR_Artist_2 ON (true)
        ORDER BY
          ORDER_COUNT_FOR_Artist_2.count DESC
        LIMIT
          5
      ) AS rows_4
  ) AS universe_3

[]
