crates/query-engine/translation/tests/snapshots/tests__very_nested_recursive_relationship.snap
---
source: crates/query-engine/translation/tests/tests.rs
expression: result
---
SELECT
  JSON_OBJECT('rows', ARRAY_AGG(universe_13)) AS universe
FROM
  (
    SELECT
      *
    FROM
      (
        SELECT
          RELATIONSHIP_Albums_1.Albums AS Albums
        FROM
          public.Artist AS Artist_0
          LEFT OUTER JOIN (
            SELECT
              JSON_OBJECT('rows', ARRAY_AGG(RELATIONSHIP_Albums_1)) AS Albums
            FROM
              (
                SELECT
                  *
                FROM
                  (
                    SELECT
                      RELATIONSHIP_Artist_3.Artist AS Artist
                    FROM
                      public.Album AS Album_2
                      LEFT OUTER JOIN (
                        SELECT
                          JSON_OBJECT('rows', ARRAY_AGG(RELATIONSHIP_Artist_3)) AS Artist
                        FROM
                          (
                            SELECT
                              *
                            FROM
                              (
                                SELECT
                                  Artist_4.Name AS name,
                                  RELATIONSHIP_Albums_5.Albums AS Albums
                                FROM
                                  public.Artist AS Artist_4
                                  LEFT OUTER JOIN (
                                    SELECT
                                      JSON_OBJECT('rows', ARRAY_AGG(RELATIONSHIP_Albums_5)) AS Albums
                                    FROM
                                      (
                                        SELECT
                                          *
                                        FROM
                                          (
                                            SELECT
                                              RELATIONSHIP_Artist_7.Artist AS Artist
                                            FROM
                                              public.Album AS Album_6
                                              LEFT OUTER JOIN (
                                                SELECT
                                                  JSON_OBJECT('rows', ARRAY_AGG(RELATIONSHIP_Artist_7)) AS Artist
                                                FROM
                                                  (
                                                    SELECT
                                                      *
                                                    FROM
                                                      (
                                                        SELECT
                                                          Artist_8.Name AS name
                                                        FROM
                                                          public.Artist AS Artist_8
                                                        WHERE
                                                          (
                                                            true
                                                            AND (Album_6.ArtistId = Artist_8.ArtistId)
                                                          )
                                                      ) AS rows_9
                                                  ) AS RELATIONSHIP_Artist_7
                                              ) AS RELATIONSHIP_Artist_7 ON (true)
                                            WHERE
                                              (
                                                true
                                                AND (Artist_4.ArtistId = Album_6.ArtistId)
                                              )
                                          ) AS rows_10
                                      ) AS RELATIONSHIP_Albums_5
                                  ) AS RELATIONSHIP_Albums_5 ON (true)
                                WHERE
                                  (
                                    true
                                    AND (Album_2.ArtistId = Artist_4.ArtistId)
                                  )
                              ) AS rows_11
                          ) AS RELATIONSHIP_Artist_3
                      ) AS RELATIONSHIP_Artist_3 ON (true)
                    WHERE
                      (
                        true
                        AND (Artist_0.ArtistId = Album_2.ArtistId)
                      )
                  ) AS rows_12
              ) AS RELATIONSHIP_Albums_1
          ) AS RELATIONSHIP_Albums_1 ON (true)
      ) AS rows_14
  ) AS universe_13

[]
